Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBooleanIntObj.quorum
Integer int
int:SetValue(5)
boolean bool = cast(boolean, int)
output bool