Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBooleanIntObj.quorum
Integer int
int:setValue(5)
boolean b = int